tests/js_error/source_locations/statement/for_await/async_iterator_close_start_module.exp
Error: 
  ┌ tests/js_error/source_locations/statement/for_await/async_iterator_close_start_module.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (tests/js_error/source_locations/statement/for_await/async_iterator_close_start_module.js:8:15)
  at return (<native>)
  at foo (tests/js_error/source_locations/statement/for_await/async_iterator_close_start_module.js:15:20)